--- a/IT-Inventory/Views/People/Index.cshtml
+++ b/IT-Inventory/Views/People/Index.cshtml
@@ -10,78 +10,107 @@
 {
     <h3>Список сотрудников синхронизирован с Active Directory!</h3>
 }
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.People.First().FullName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.People.First().AccountName)
-        </th>
-        <th></th>
-        <th></th>
-        <th></th>
-    </tr>
-    @foreach (var item in Model.People)
+
+<ul class="pagination">
+    @foreach (var firstLetter in Model.FirstLetters)
     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.FullName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.AccountName)
-            </td>
-            <td>
-                @if (StaticData.CountUserGrant(item.Id) > 0)
-                {
-                    @Html.ActionLink("История (выдано)", "Index", "Histories", new {peopleId = item.Id}, null)
-                }
-            </td>
-            <td>
-                @if (StaticData.CountComputers(item.Id) > 0)
-                {
-                    @Html.ActionLink("Компьютер(ы)", "Index", "Computers", new {personId = item.Id}, null)
-                }
-            </td>
-            <td>
-                @if (item.SupportRequests.Count > 0)
-                {
-                    @Html.ActionLink("Заявки", "Index", "SupportRequests", new { searchUserId = item.Id }, null)
-                }
-            </td>
-
-        </tr>
+        <li class="@(Model.Letter == firstLetter.ToString() ? "active" : "")">
+            @Html.ActionLink(firstLetter.ToString(), "Index", new { letter = firstLetter.ToString() })
+        </li>
     }
-</table>
-<!-- pager -->
-@if (Model.Pager != null && Model.Pager.EndPage > 1)
-{
-    <ul class="pagination">
-        @if (Model.Pager.CurrentPage > 1)
-        {
-            <li>
-                @Html.ActionLink("Первая", "Index", new { page = 1 })
-            </li>
-            <li>
-                @Html.ActionLink("Предыдущая", "Index", new { page = Model.Pager.CurrentPage - 1 })
-            </li>
-        }
+</ul>
 
-        @for (var pageNum = Model.Pager.StartPage; pageNum <= Model.Pager.EndPage; pageNum++)
-        {
-            <li class="@(pageNum == Model.Pager.CurrentPage ? "active" : "")">
-                @Html.ActionLink(pageNum.ToString(), "Index", new { page = pageNum })
-            </li>
-        }
 
-        @if (Model.Pager.CurrentPage < Model.Pager.TotalPages)
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.People.First().FullName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.People.First().AccountName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.People.First().Dep)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.People.First().Email)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.People.First().PhoneNumber)
+            </th>
+            <th></th>
+            <th></th>
+            <th></th>
+        </tr>
+        @foreach (var item in Model.People)
         {
-            <li>
-                @Html.ActionLink("Следующая", "Index", new { page = Model.Pager.CurrentPage + 1 })
-            </li>
-            <li>
-                @Html.ActionLink("Последняя", "Index", new { page = Model.Pager.TotalPages })
-            </li>
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FullName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AccountName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Dep.Name)
+                </td>
+                <td>
+                    <a href="mailto:@item.Email">@item.Email</a>
+                </td>
+                <td>
+                    <a href="tel:+@item.PhoneNumber">@item.PhoneNumber</a>
+                </td>
+                <td>
+                    @if (StaticData.CountComputers(item.Id) > 0)
+                    {
+                        @Html.ActionLink("Компьютер(ы)", "Index", "Computers", new { personId = item.Id }, null)
+                    }
+                </td>
+                <td>
+                    @if (StaticData.CountUserGrant(item.Id) > 0)
+                    {
+                        @Html.ActionLink("История (выдано)", "Index", "Histories", new { peopleId = item.Id }, null)
+                    }
+                </td>
+                <td>
+                    @if (item.SupportRequests.Count > 0)
+                    {
+                        @Html.ActionLink("Заявки", "Index", "SupportRequests", new { searchUserId = item.Id }, null)
+                    }
+                </td>
+
+            </tr>
         }
-    </ul>
-}
+    </table>
+    <!-- pager -->
+    @if (Model.Pager != null && Model.Pager.EndPage > 1)
+    {
+        <ul class="pagination">
+            @if (Model.Pager.CurrentPage > 1)
+            {
+                <li>
+                    @Html.ActionLink("Первая", "Index", new { page = 1 })
+                </li>
+                <li>
+                    @Html.ActionLink("Предыдущая", "Index", new { page = Model.Pager.CurrentPage - 1 })
+                </li>
+            }
+
+            @for (var pageNum = Model.Pager.StartPage; pageNum <= Model.Pager.EndPage; pageNum++)
+            {
+                <li class="@(pageNum == Model.Pager.CurrentPage ? "active" : "")">
+                    @Html.ActionLink(pageNum.ToString(), "Index", new { letter = Model.Letter, page = pageNum })
+                </li>
+            }
+
+            @if (Model.Pager.CurrentPage < Model.Pager.TotalPages)
+            {
+                <li>
+                    @Html.ActionLink("Следующая", "Index", new { page = Model.Pager.CurrentPage + 1 })
+                </li>
+                <li>
+                    @Html.ActionLink("Последняя", "Index", new { page = Model.Pager.TotalPages })
+                </li>
+            }
+        </ul>
+    }
