--- a/IT-Inventory/Views/Computers/Details.cshtml
+++ b/IT-Inventory/Views/Computers/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IT_Inventory.ViewModels.ComputerViewModel
 
 @{
-    ViewBag.Title = "Подробно";
+    ViewBag.Title = "Фактические данные о компьютере " + Model.ComputerName;
 }
 
 <h2>@ViewBag.Title</h2>
@@ -9,14 +9,6 @@
 <div>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.ComputerName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ComputerName)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.Owner)
         </dt>
@@ -76,6 +68,5 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Редактировать", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Назад к списку", "Index")
 </p>
