--- a/IT-Inventory/Views/Computers/Details.cshtml
+++ b/IT-Inventory/Views/Computers/Details.cshtml
@@ -30,7 +30,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Ram)
+            @Html.DisplayFor(model => model.Ram) ГБ
         </dd>
 
         <dt>
