--- a/IT-Inventory/Views/Items/IndexOfType.cshtml
+++ b/IT-Inventory/Views/Items/IndexOfType.cshtml
@@ -49,7 +49,7 @@
         @if (Model.Type.Id == 11)
         {
             <td>
-                @StaticData.CountPrinters(item.Id).ToString()
+                @StaticData.CountCartridgePrinters(item.Id).ToString()
             </td>
         }
 
