--- a/IT-Inventory/Views/Shared/_Layout.cshtml
+++ b/IT-Inventory/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                         <li>@Html.ActionLink("Склад", "Index", "Items", null, new {@href = "/Items/Index"})</li>
                         <li>@Html.ActionLink("Принтеры", "Index", "Printers", null, new {@href = "/Printers/Index"})</li>
                         <li>@Html.ActionLink("История", "Index", "Histories", null, new {@href = "/Histories/Index"})</li>
-                        <li>@Html.ActionLink("Техподдержка", "Index", "SupportRequests", null, new { @href = "/SupportRequests/Index" })</li>
+                        <li>@Html.ActionLink("Техподдержка", "Index", "Support", null, new { @href = "/Support/Index" })</li>
                         <li>@Html.ActionLink("Сотрудники", "Index", "People", null, new {@href = "/People/Index"})</li>
                         <li>@Html.ActionLink("Компьютеры", "Index", "Computers", null, new { @href = "/Computers/Index" })</li>
                     </ul>
