--- a/IT-Inventory/Views/Support/Create.cshtml
+++ b/IT-Inventory/Views/Support/Create.cshtml
@@ -29,16 +29,31 @@
             </div>
         </div>
 
-
         <div class="form-group">
-            @Html.LabelFor(model => model.Text, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Text, htmlAttributes: new {@class = "control-label col-md-2"})
             <div class="col-md-10">
                 @Html.TextAreaFor(model => model.Text, 10, 55, null)
             </div>
         </div>
 
+@if (User.IsInRole(@"RIVS\IT-Dep"))
+{
+    <div class="form-group">
+        @Html.LabelFor(model => model.FromId, htmlAttributes: new {@class = "control-label col-md-2"})
+        <div class="col-md-10">
+            @Html.DropDownListFor(model => model.FromId, StaticData.SelectUsers(false), "", new {@class = "btn btn-default dropdown-toggle"})
+            @Html.ValidationMessageFor(model => model.FromId, "", new {@class = "text-danger"})
+        </div>
+    </div>
 
-
+    <div class="form-group">
+        @Html.LabelFor(model => model.ToId, htmlAttributes: new {@class = "control-label col-md-2"})
+        <div class="col-md-10">
+            @Html.DropDownListFor(model => model.ToId, StaticData.SelectUsers(true), "", new {@class = "btn btn-default dropdown-toggle"})
+            @Html.ValidationMessageFor(model => model.ToId, "", new {@class = "text-danger"})
+        </div>
+    </div>
+}
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
